--- a/Experience.html
+++ b/Experience.html
@@ -98,5 +98,5 @@
                     <li>Managed and processed cases related to paycheck and benefits issues,
                         ensuring resolution in compliance with established procedures.</li>
 
-                        <center><footer><h2><a href="./index.html">Back</a></h2></footer></center>
+                       <footer><h2><a href="./index.html">Back</a></h2></footer>
                     </ul>
